--- a/product-preview-card/scss/_base.scss
+++ b/product-preview-card/scss/_base.scss
@@ -13,12 +13,22 @@ body {
     height: 100vh;
 }
 
-h1 {
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    clip-path: inset(50%);
+    white-space: nowrap;
+}
+
+h2 {
     @extend .text-preset-4 !optional;
     text-transform: uppercase;
 }
 
-h2 {
+h3 {
     @extend .text-preset-1 !optional;
     color: $black;
 }
