--- a/product-preview-card/scss/_components.scss
+++ b/product-preview-card/scss/_components.scss
@@ -1,6 +1,6 @@
 .product-card {
     width: 100%;
-    max-width: 21.875rem;
+    max-width: clamp(21.875rem, 6.9656rem + 63.6132vw, 37.5rem);;
     display: grid;
     margin: 0 auto;
     border-radius: 8px;
